hphp/test/slow/reified_generics/reified-parent-with-erasure.php.expectf
Fatal error: Class D expects a reified generic at index 1 in %s on line 8
